--- a/views/linux.html
+++ b/views/linux.html
@@ -7,11 +7,11 @@
         <div id="content">
             
             <figure id="fig3">
-                <img src="img/linux.png" alt="Logo of linux" />
+                <img src="/img/linux.png" alt="Logo of linux" />
             </figure>
             
             <figure id="fig4">
-                <img src="img/ubuntu.png" alt="Logo of Ubuntu" />
+                <img src="/img/ubuntu.png" alt="Logo of Ubuntu" />
             </figure>
             
             
