--- a/views/macOS.html
+++ b/views/macOS.html
@@ -10,11 +10,11 @@
             a company called NeXT. This compay was founded in 1985 by Steve Jobs after he was fired from Apple. Years later, Apple would go on to purchase the company and rehire Steve Jobs.</p>
             
             <figure>
-                <img src="img/macOS.png" alt="Logo of macOS" />
+                <img src="/img/macOS.png" alt="Logo of macOS" />
             </figure>
             
             <figure>
-                <img src="img/applelogo.png" alt="Logo of macOS" />
+                <img src="/img/applelogo.png" alt="Logo of macOS" />
             </figure>
             
             <form action="https://en.wikipedia.org/wiki/MacOS">
