--- a/views/windows.html
+++ b/views/windows.html
@@ -7,7 +7,7 @@
         <div id="content3">
             
             <figure id="fig1">
-                <img src="img/windows.png" alt="Logo of windows" />
+                <img src="/img/windows.png" alt="Logo of windows" />
             </figure>
             
             <form action="https://en.wikipedia.org/wiki/Microsoft_Windows#Early_versions_2">
