--- a/views/index.ejs.html
+++ b/views/index.ejs.html
@@ -22,5 +22,7 @@
                    <li> Linux </li>
                 </ol>
         </div>
+
+        <p>Random sentence of the day: <%= randomSentence %></p>
         
 <% include partials/footer %>
