--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,8 @@
                 </ol>
         </div>
 
-        <p>Random sentence of the day: <%= randomSentence %></p>
+        <div>
+           <% include partials/random.ejs %>
+        </div>
         
 <% include partials/footer %>
