--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
         </div>
 
         <div>
-           <% include partials/random.ejs %>
+           <% include partials/random %>
         </div>
         
 <% include partials/footer %>
