--- a/views/index.ejs.html
+++ b/views/index.ejs.html
@@ -24,7 +24,7 @@
         </div>
 
         <div>
-           <% include partials/random %>
-        </div>
+            Random word of the second: <% include partials/random %>
+        
         
 <% include partials/footer %>
