--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -20,9 +20,9 @@ Homework 1
 <body id="body1">
 <nav>
 <a href="/">Home</a>
-<a href="/Linux">Mercury</a>
-<a href="/macOS"> Venus </a>
-<a href="/windows"> Earth </a>
+<a href="/linux">Linux</a>
+<a href="/macOS"> macOS </a>
+<a href="/windows"> Windows </a>
 </nav>
 <br>
 </head>
